<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Save the Date</string>
    <string name="action_settings">Settings</string>
    <string name="app_id">605681339505094</string>
    <string name="get_started">To get started, log in using Facebook</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="logout">Log out</string>
    <string name="selection_notice_message_hint">Notice message</string>
    <string name="selection_user_type">Bride</string>
    <string name="default_spouse_to_be_name">Who are you marrying?</string>
    <string name="person_type_groom">Groom</string>
    <string name="person_type_bride">Bride</string>
    <string name="person_type_other">Other</string>
    <string name="error_dialog_title">Error</string>
	<string name="error_dialog_button_text">OK</string>
	<string name="action_photo_default">Select Picture</string>
    <string name="action_photo_ready">Ready</string>
    <string name="action_photo_camera">Take Photo</string>
    <string name="action_photo_gallery">Choose Existing</string>
    <string name="select_picture">Select Picture</string>
	<string name="date">Date:</string>
	<string name="photo">Photo:</string>
	<string name="recipients">Recipients:</string>
	<string name="default_recipients_count">Select recipients</string>
	<string name="default_wedding_photo">Select photo</string>
	<string name="single_user_selected">%1$s</string>
	<string name="two_users_selected">%1$s and %2$s</string>
	<string name="multiple_users_selected">%1$s and %2$s others</string>
	<string name="selected_user_count">%1$s recipients</string>
	<string name="view_countdown">Countdown</string>
	<string name="update_notice">Update Notice</string>
	<string name="share">Share</string>
	<string name="overflow">Action Overflow</string>
	<string name="share_action_facebook">Facebook</string>
	
	
	
	<string name="saved_wedding_day">saved_wedding_day</string>
	<string name="saved_wedding_month">saved_wedding_month</string>  
	<string name="saved_wedding_year">saved_wedding_year</string>
	<string name="saved_event_id">saved_event_id</string>
	<string name="saved_photo_uri">saved_photo_uri</string>
	<string name="saved_temp_uri">saved_temp_uri</string>
	<string name="saved_notice_message">saved_notice_message</string>
	<string name="saved_user">saved_user</string>
	<string name="saved_significant_other">saved_significant_other</string>
	<string name="saved_recipients_list">saved_recipients_list</string>

	<string name="postselection_days_till_wedding">Days till the wedding</string>
	<string name="postselection_days_till_wedding_count">0</string>
	
</resources>
