<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#C3C3E5" >
    
    <ListView
        android:id="@+id/selection_person_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:divider="@android:color/transparent"
  		android:dividerHeight="5sp"
        android:background="@drawable/square_border_white"/>
      
    <ScrollView 
        android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<EditText
		    android:id="@+id/selection_notice_message"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal"
		    android:layout_margin="10dp"
		    android:background="@drawable/square_border_white"
		    android:maxLines="3"
		    android:textColor="#000000"
		    android:hint="@string/selection_notice_message_hint"/>
	</ScrollView>
    
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:background="@drawable/square_border_white"
	    android:orientation="horizontal">
	    
	    <TextView
		    android:id="@+id/selection_date" 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textColor="#443266"
		    android:textSize="18sp"
	        android:typeface="serif"
	        android:textStyle="bold"
	        android:text="@string/date"/>
	    
	    <TextView 
	        android:id="@+id/selection_wedding_date"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textColor="#3333CC"
	        android:gravity="right"
	        android:layout_marginRight="15dp"
            android:textSize="14sp"
            android:typeface="serif" />
	</LinearLayout>
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:layout_marginTop="10dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:background="@drawable/square_border_white"
	    android:orientation="horizontal">
	    
	    <TextView
		    android:id="@+id/selection_photo" 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textColor="#443266"
		    android:textSize="18sp"
	        android:typeface="serif"
	        android:textStyle="bold"
	        android:text="@string/photo"/>
	    
	    <TextView 
	        android:id="@+id/selection_wedding_photo"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textColor="#3333CC"
	        android:gravity="right"
	        android:layout_marginRight="15dp"
            android:textSize="14sp"
            android:typeface="serif"
            android:text="@string/default_wedding_photo" />
	    
	</LinearLayout>
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:layout_marginTop="10dp"
	    android:background="@drawable/square_border_white"
	    android:orientation="horizontal">
	    
	    <TextView
		    android:id="@+id/selection_recipients" 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textColor="#443266"
		    android:textSize="18sp"
	        android:typeface="serif"
	        android:textStyle="bold"
	        android:text="@string/recipients"/>
	    
	     <TextView
	        android:id="@+id/selection_recipients_count"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textColor="#3333CC"
	        android:gravity="right"
	        android:layout_marginRight="15dp"
            android:textSize="14sp"
            android:typeface="serif"
            android:text="@string/default_recipients_count" />
	</LinearLayout>
	
	<Button
	    android:id="@+id/selection_save_the_date_button"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:background="@drawable/square_border_purple"
	    android:layout_gravity="center_horizontal"
	    android:gravity="center"
	    android:text="@string/app_name"
	    android:textColor="#F1F0FF"
		android:textSize="18sp"
	    android:typeface="serif"
	    android:textStyle="bold"/>

</LinearLayout>
